packages/core/src/sass/app/_common/components/account-common.scss
.onfido-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.6rem;

    &__hidden {
        display: none;
    }

    &-view_wrapper {
        position: relative;
        min-width: 32.8rem;
        min-height: 50rem;
        margin: auto;
        @include mobile-or-tablet-screen {
            height: 100%;
        }
    }

    .account-form__poi-confirm-example_container {
        margin-bottom: 0;
    }

    .onfido-sdk-ui {
        &-Modal-inner {
            border-radius: $BORDER_RADIUS * 2;
        }
        &-Theme-step {
            @include mobile {
                height: auto;
            }
        }
    }

    @include mobile-or-tablet-screen {
        padding: 1.6rem;
        height: 100%;

        & .onfido-sdk-ui-PageTitle {
            &-titleWrapper {
                margin: 2.4rem 0 0;
            }

            &-title {
                font-size: 2rem;
                text-align: center;
            }
            &-titleSpan {
                font-size: 2rem;
            }
        }
    }

    .onfido-sdk-ui-Camera-webcamContainer {
        left: auto;
        width: -webkit-fill-available;
    }

    &__disabled {
        opacity: 0.5;
        pointer-events: none;
    }

    &__info-message {
        position: absolute;
        top: 1.6rem;
        left: 50%;
        z-index: 1;
        transform: translate(-50%);
        max-width: max-content;
        width: 100% !important;

        @include mobile-or-tablet-screen {
            margin-top: 1.6rem;
        }

        .dc-hint-box {
            margin-inline: 0.8rem;
        }
    }

    &__status-message {
        background-color: var(--transparent-correct-message);
        justify-content: flex-start;
        transition: transform 0.35s ease, opacity 0.35s linear;
        transform-origin: top;
        opacity: 1;
        width: 98%;

        &--exit {
            transform: scale(1, 0);
            opacity: 0;
        }

        &_container {
            position: absolute;
            top: 0.4rem;
            min-height: 3.4rem;
            text-align: center;
            z-index: 1;
            width: 100%;
        }
    }
}
/* ... */

